# statecharts-py

./: .gitignore  README.md  RULES.md  current-wont-dos.md  init_plan.md  intended-will-dos.md  pyproject.toml  run_tests.py  why-98-percent-passing.md
.claude/: ledger.json  orchestrate.json
.github/workflows/: ci.yml
bench/: README.md  run_bench.py
docs/: findings-37-codebase-quality-audit.md
docs/design/: postgres-durability.md
docs/guide/: durability.md  porting-from-clojure.md
docs/reference/: behavior-register.md
docs/research/: improvement-areas.md
examples/: 02_visualize.py  05_durable_workflow.py  README.md  async_traffic_light.py  fulcro_store.py  invoke_demo.py  load_scxml.py  payment_flow.py
scripts/: create-standard-labels.sh
src/statecharts/: __init__.py  aio.py  algorithm.py  chart.py  convenience.py  data_model.py  durable.py  durable_postgres.py  ecma.py  elements.py  environment.py  event_queue.py  events.py  execution_model.py  invocations.py  invoke.py  ops.py  protocols.py  simple.py  store.py  viz.py  working_memory.py
src/statecharts/scxml/: __init__.py  loader.py
tests/: test_aio.py  test_basic.py  test_bench_smoke.py  test_datamodel_reentry.py  test_delayed.py  test_durable.py  test_durable_postgres.py  test_eventless_and_final.py  test_events.py  test_history.py  test_invoke_native.py  test_loader_security.py  test_parallel.py  test_semantics.py  test_store.py  test_validation.py  test_version.py  test_viz.py  test_w3c_smoke.py
tests/w3c/: runner.py
