[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "statecharts"
version = "0.0.1"
description = "A faithful Python port of fulcrologic/statecharts: W3C SCXML semantics without the XML."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "avidrucker" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Optional durable backend: PostgresStore (multi-node, at-least-once lease delivery).
# The default install stays zero-dependency; install with `pip install -e '.[postgres]'`.
# `psycopg[binary]` bundles libpq (no system libpq-dev needed) — a dev/test convenience;
# for production psycopg recommends the non-binary build against a system libpq.
postgres = ["psycopg[binary]>=3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
statecharts = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
